--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <a href="#future">Future</a>
         </p>
 
-        <div class="rect"></div>  
+      <div class="rect r1"></div>  
 
-      <div class="wrapped_past">
+      <div class="wrapped">
 
         <button class="accordion">Past Simple</button>
         <div class="panel">
@@ -54,21 +54,24 @@
       <a href="#future">Future</a>
     </p>
 
-    <div class="rect1"></div>  
+    <div class="rect r2"></div>  
 
-    <button class="accordion">Present Simple</button>
-    <div class="panel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+    <div class="wrapped">
+      <button class="accordion">Present Simple</button>
+      <div class="panel">
+        <p>It's used to express regular actions, everyday habits or routines and timetables.<br><b>This bus goes every 15 minutes.</b> </p>
+      </div>
 
-    <button class="accordion">Present Continuous</button>
-    <div class="panel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+      <button class="accordion">Present Continuous</button>
+      <div class="panel">
+        <p>It's used to express actions which happen right now. <br><b>I'm thinking about the best performance of the</b> </p>
+      </div>
 
-    <button class="accordion">Present Perfect</button>
-    <div class="panel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <button class="accordion">Present Perfect</button>
+      <div class="panel">
+        <p>It's used to express actions which happen right now. <br><b>I'm thinking about the best performance of the information.</b> </p>
+      </div>
+
     </div>
   </div>
   
@@ -79,25 +82,27 @@
       <a href="#future" style="color: #fc6d26">Future</a>
     </p>
 
-    <div class="rect2"></div> 
+    <div class="rect r3"></div> 
 
-    <button class="accordion">Future Simple</button>
-    <div class="panel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+    <div class="wrapped">
 
-    <button class="accordion">Future Continuous</button>
-    <div class="panel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+      <button class="accordion">Future Simple</button>
+      <div class="panel">
+        <p>It's used to express actions which happen some time or other in the future. <br><b> I will do my hometask. Probably.</b> </p>
+      </div>
 
-    <button class="accordion">Future Perfect</button>
-    <div class="panel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <button class="accordion">Future Continuous</button>
+      <div class="panel">
+        <p>It's used to express actions in progres in the future. <br><b> Maryana will have launched a public speaking course. <br>I will be creatig a new website tomorrow.</b> </p>
+      </div>
+
+      <button class="accordion">Future Perfect</button>
+      <div class="panel">
+        <p>It's used to express actions in the future which are going to finish by the particular moment. <br><b> Maryana will have launched a public speaking course by the end of the year. <br>By the end of the course everybody will have been very confident and assertive with public speaking.</b> </p>
+      </div>
     </div>
   </div>
   
   <script type="text/javascript" src="script.js"></script>
 </body>
-
 </html>
